<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="label_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_site">Site</string>
    <string name="label_company_name">Empresa</string>
    <string name="label_card_color">Cor do cartão</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_card_success">Cartão cadastrado.</string>
    <string name="label_share">Compartilhar cartão</string>
</resources>